--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <title>Tugas Modul 1 Kelompok 49</title>
-
+<link rel="stylesheets" type="text" href="style.css">
 <head>
 </head>
 
